syntax = "proto3";

package beerkellar;

option go_package = "github.com/brotherlogic/beerkellar/proto";

message AddBeerRequest {
  int64 beer_id = 1;
  int32 quantity = 2;
  int32 size_fl_oz = 3;
}

message AddBeerResponse {
}


message GetLoginRequest {}

message GetLoginResponse {
  string url = 1;
}

service BeerKeller {
  rpc AddBeer(AddBeerRequest) returns (AddBeerResponse) {}
  rpc GetLogin(GetLoginRequest) returns (GetLoginResponse) {}
}