syntax = "proto3";

package beerkellar;

option go_package = "github.com/brotherlogic/beerkellar/proto";

message Cellar {
  repeated int64 beer_ids = 1;
}

message CellarEntry {
  int64 beer_id = 1;
  int64 date_added = 2;
}

message DrinkArchive {
  repeated Drink drinks = 1;
}

message Drink {
  int64 beer_id = 1;
  int64 date = 2;
  float score = 3;
}

message BeerCache {
  repeated Beer beers = 1;
}

message Beer {
  int64 id = 1;
  string name = 2;
  float abv = 3;
  string brewery = 4;
  float global_score = 5;
}